<resources>
    <string name="app_name">Valet Parking</string>



    <string name="list_select_info">Swipe right to select a car to get from the parking</string>
    <string name="car_detail_title">Car Information</string>
    <string name="car_number_plate">Car number plate</string>
    <string name="lift">Lift</string>
    <string name="floor">Floor</string>
    <string name="park_slot">Park slot number</string>
    <string name="park_car_title">Car Parking Details</string>
    <string name="car_plate_hint">Enter car number plate</string>
    <string name="hint_car_plate">Enter car number plate</string>
    <string name="hint_floor_number">Enter floor number</string>
    <string name="hint_lift_no">Enter lift identity</string>
    <string name="hint_park_slot">Enter parking slot number</string>
    <string name="log_out">Log out</string>
    <string name="info">info</string>
    <string name="login_hint_zone">Enter Lift Assigned</string>
</resources>
